--- a/simpletable/Base.lproj/Main.storyboard
+++ b/simpletable/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Segues with Peek and Pop" minToolsVersion="7.1"/>
     </dependencies>
     <scenes>
         <!-- Concerts-->
@@ -16,7 +15,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ConcertTableViewCell" id="wia-My-Eq1" customClass="ConcertTableViewCell" customModule="simpletable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="86" width="320" height="90"/>
+                                <rect key="frame" x="0.0" y="22" width="320" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wia-My-Eq1" id="Gg3-cq-EWx">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="89.5"/>
@@ -47,11 +46,17 @@
                                             <rect key="frame" x="242" y="22" width="45.5" height="45.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" backgroundImage="MapIcon"/>
+                                            <connections>
+                                                <segue destination="x03-xr-a8d" kind="push" identifier="showMapDetail" id="s4c-sB-ACm"/>
+                                            </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kj1-qK-0Nm">
                                             <rect key="frame" x="189" y="22" width="45.5" height="45.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" backgroundImage="PhotoIcon"/>
+                                            <connections>
+                                                <segue destination="TR5-hZ-CjB" kind="push" identifier="showPhotoDetail" id="9m3-aZ-ChX"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                 </tableViewCellContentView>
@@ -61,10 +66,6 @@
                                     <outlet property="mapsbutton" destination="rKn-jb-Bzm" id="0Eb-q4-O7R"/>
                                     <outlet property="monthlabel" destination="8Ia-Vp-Xrm" id="WAg-Vj-G6q"/>
                                     <outlet property="photobutton" destination="kj1-qK-0Nm" id="K0U-N1-mcD"/>
-                                    <segue destination="TR5-hZ-CjB" kind="push" identifier="showConcert" id="r20-rS-F2k">
-                                        <segue key="commit" inheritsFrom="parent" id="uch-9u-S4t"/>
-                                        <segue key="preview" inheritsFrom="commit" id="KsW-n9-7Ny"/>
-                                    </segue>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -78,6 +79,30 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fbb-B3-3yA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-248" y="285"/>
+        </scene>
+        <!--Map View Controller-->
+        <scene sceneID="nFR-Q1-yhY">
+            <objects>
+                <viewController id="x03-xr-a8d" customClass="MapViewController" customModule="simpletable" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="9P7-6m-roP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" id="Ydk-4L-h6W">
+                                <rect key="frame" x="0.0" y="20" width="320" height="528"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="jwy-0V-4a4"/>
+                    <connections>
+                        <outlet property="mapView" destination="Ydk-4L-h6W" id="Nhj-vX-Q0f"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5i5-h2-IpW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="175" y="-62"/>
         </scene>
         <!--Concert-->
         <scene sceneID="K4I-hG-2tl">
@@ -124,7 +149,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="816" y="285"/>
+            <point key="canvasLocation" x="516" y="293"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6eI-xa-gb6">
@@ -150,7 +175,4 @@
         <image name="MapIcon" width="512" height="512"/>
         <image name="PhotoIcon" width="512" height="512"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="r20-rS-F2k"/>
-    </inferredMetricsTieBreakers>
 </document>
