--- a/simpletable/Base.lproj/Main.storyboard
+++ b/simpletable/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ConcertTableViewCell" id="wia-My-Eq1" customClass="ConcertTableViewCell" customModule="simpletable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="22" width="320" height="90"/>
+                                <rect key="frame" x="0.0" y="86" width="320" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wia-My-Eq1" id="Gg3-cq-EWx">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="89.5"/>
@@ -63,7 +63,6 @@
                                 <connections>
                                     <outlet property="bandname" destination="K9b-TV-Xx8" id="9xQ-O5-iS6"/>
                                     <outlet property="datelabel" destination="11E-IQ-xp1" id="QS4-e8-Yhg"/>
-                                    <outlet property="mapsbutton" destination="rKn-jb-Bzm" id="0Eb-q4-O7R"/>
                                     <outlet property="monthlabel" destination="8Ia-Vp-Xrm" id="WAg-Vj-G6q"/>
                                     <outlet property="photobutton" destination="kj1-qK-0Nm" id="K0U-N1-mcD"/>
                                 </connections>
@@ -75,6 +74,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title=" Concerts" id="iCL-5P-mPK"/>
+                    <connections>
+                        <outlet property="itemtable" destination="cIh-T0-pj9" id="ng6-NL-AM7"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fbb-B3-3yA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
