--- a/simpletable/Base.lproj/Main.storyboard
+++ b/simpletable/Base.lproj/Main.storyboard
@@ -13,37 +13,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" text="" id="S6D-fb-SWb">
+                            <rect key="frame" x="0.0" y="64" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <scopeButtonTitles>
+                                <string>Date</string>
+                            </scopeButtonTitles>
+                            <connections>
+                                <outlet property="delegate" destination="cIh-T0-pj9" id="rrV-oB-cxT"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ConcertTableViewCell" id="wia-My-Eq1" customClass="ConcertTableViewCell" customModule="simpletable" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="86" width="320" height="90"/>
+                                <rect key="frame" x="0.0" y="130" width="320" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wia-My-Eq1" id="Gg3-cq-EWx">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K9b-TV-Xx8">
-                                            <rect key="frame" x="8" y="8" width="115" height="73.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="K9b-TV-Xx8">
+                                            <rect key="frame" x="8" y="7" width="115" height="73.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8Ia-Vp-Xrm">
-                                            <rect key="frame" x="139" y="22" width="42" height="21"/>
+                                            <rect key="frame" x="131" y="21.5" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="9"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="11E-IQ-xp1">
-                                            <rect key="frame" x="139" y="46" width="42" height="21"/>
+                                            <rect key="frame" x="131" y="45.5" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="17"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="rKn-jb-Bzm">
-                                            <rect key="frame" x="242" y="22" width="45.5" height="45.5"/>
+                                            <rect key="frame" x="234" y="21" width="45.5" height="45.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" backgroundImage="MapIcon"/>
                                             <connections>
@@ -51,7 +62,7 @@
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="kj1-qK-0Nm">
-                                            <rect key="frame" x="189" y="22" width="45.5" height="45.5"/>
+                                            <rect key="frame" x="181" y="21" width="45.5" height="45.5"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" backgroundImage="PhotoIcon"/>
                                             <connections>
@@ -73,14 +84,22 @@
                             <outlet property="delegate" destination="rcz-8N-z5B" id="btd-0u-Lk6"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title=" Concerts" id="iCL-5P-mPK"/>
+                    <navigationItem key="navigationItem" title=" Concerts" id="iCL-5P-mPK">
+                        <barButtonItem key="rightBarButtonItem" title="Filter Date" id="YRP-18-qlX">
+                            <connections>
+                                <action selector="onFilterDateTapped:" destination="rcz-8N-z5B" id="0cz-zm-cHt"/>
+                                <segue destination="kgK-VT-6Ae" kind="push" id="DFx-0v-eHS"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="itemtable" destination="cIh-T0-pj9" id="ng6-NL-AM7"/>
+                        <outlet property="searchbar" destination="S6D-fb-SWb" id="2ah-dw-QUL"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fbb-B3-3yA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-248" y="285"/>
+            <point key="canvasLocation" x="-955" y="177"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="nFR-Q1-yhY">
@@ -104,9 +123,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5i5-h2-IpW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="175" y="-62"/>
+            <point key="canvasLocation" x="-384" y="-438"/>
         </scene>
-        <!--Concert-->
+        <!--Filter Dates-->
+        <scene sceneID="0KB-kf-ZQU">
+            <objects>
+                <viewController id="kgK-VT-6Ae" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="udg-sN-pSh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" id="dJW-WZ-95p">
+                                <rect key="frame" x="0.0" y="148" width="320" height="216"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="483171675.85455">
+                                    <!--2016-04-24 06:21:15 +0000-->
+                                </date>
+                            </datePicker>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="GB9-OP-3Ii">
+                                <rect key="frame" x="111" y="412" width="99" height="38"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Done"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Filter Dates" id="Dyi-Wx-6wR"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SmR-re-cxJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-384" y="873"/>
+        </scene>
+        <!--Photo-->
         <scene sceneID="K4I-hG-2tl">
             <objects>
                 <viewController id="TR5-hZ-CjB" customClass="ConcertViewController" customModule="simpletable" customModuleProvider="target" sceneMemberID="viewController">
@@ -129,17 +177,10 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="C64-js-XNT">
-                                <rect key="frame" x="20" y="71" width="280" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Concert" id="PcC-kJ-aY2"/>
+                    <navigationItem key="navigationItem" title="Photo" id="PcC-kJ-aY2"/>
                     <connections>
                         <outlet property="photoImageView" destination="6kO-6N-p9X" id="NIa-Mz-w27"/>
                     </connections>
@@ -151,7 +192,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="516" y="293"/>
+            <point key="canvasLocation" x="-384" y="177"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6eI-xa-gb6">
@@ -169,7 +210,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BHN-Hr-9tG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-764" y="305"/>
+            <point key="canvasLocation" x="-1332" y="177"/>
         </scene>
     </scenes>
     <resources>
